Changed height in Games to avoid overflow

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ a:active {
 #top-level-container {
   display: grid;
   grid-template-columns: [c1] 100% [c2];
-  grid-template-rows: [r1] 100px [r2] 1fr [r3] 200px [r4];
+  grid-template-rows: [r1] 100px [r2] 1fr [r3] 50px [r4];
   width: 100%;
   height: auto;
   margin: 0;
